# django-agnocomplete

./: .gitignore  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README.rst  requirements.pip  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
agnocomplete/: __init__.py  app.py  apps.py  constants.py  core.py  decorators.py  exceptions.py  fields.py  forms.py  register.py  urls.py  views.py  widgets.py
demo/: __init__.py  admin.py  authentication.py  autocomplete.py  common.py  fields.py  forms.py  models.py  settings.py  urls.py  urls_proxy.py  views.py  views_proxy.py
demo/fixtures/: initial_data.yaml
demo/migrations/: 0001_initial.py
demo/static/css/: admin.css  typeahead.css
demo/static/js/: typeahead.js
demo/static/js/demo/: jquery-autocomplete.js  select2.js  selectize-extra.js  selectize.js  typeahead.js
demo/templates/: base.html  jquery-autocomplete.html  select2.html  selectize.html  typeahead.html
demo/templates/includes/: nav.html
demo/tests/: __init__.py  test_admin_views.py  test_core.py  test_demo_views.py  test_discover.py  test_errors.py  test_fields.py  test_form.py  test_url_proxy.py  test_url_proxy_views.py  test_views.py
docs/: Makefile  admin-site.rst  autocomplete-definition.rst  conf.py  context-dependant-completions.rst  custom-views.rst  demo-site.rst  doc_checker.py  error-handling.rst  fields-widgets.rst  index.rst  overview.rst  url-proxy.rst  widgets.rst
