[metadata]
name = django-agnocomplete
description = Frontend-agnostic Django autocomplete utilities
url = https://github.com/peopledoc/django-agnocomplete
author = PeopleDoc Inc.
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Django :: 3.2
    Framework :: Django :: 4.2
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    Django
    requests

[options.extras_require]
dev =
    black
    isort
    flake8
    pytest
    pytest-cov
    pytest-django
    tox

[options.packages.find]
include =
    agnocomplete
    agnocomplete.*

[tool:pytest]
addopts =
    --cov-report term-missing --cov-branch --cov-report html --cov-report term
    --cov=agnocomplete -vv --strict-markers -rfE -s
testpaths =
    demo/tests/
filterwarnings =
    default

DJANGO_SETTINGS_MODULE = demo.settings
